--- a/src/app/header/add-organization-modal.tpl.html
+++ b/src/app/header/add-organization-modal.tpl.html
@@ -2,12 +2,12 @@
     <h3 class="modal-title text-center">Add Organization</h3> <a href ng-click="modal.closeModal()">X</a>
 </div>
 <div class="modal-body">
-	<form>
+	<form name="modal.organizationForm">
 		<label>Organization Name</label>
-		<input>
+		<input ng-model="modal.organizationName" required>
 	</form>
 </div>
 <div class="modal-footer">
-	<button>Add</button>
-	<button>Cancel</button>
+	<button ng-click="modal.createOrganization(modal.organizationName)">Add</button>
+	<button ng-click="modal.closeModal()">Cancel</button>
 </div>
