--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,25 +1,19 @@
 /*============================================================*/
 /*===================Table Of Contents========================*/
 /*============================================================*/
-/*=Imports===========8========================================*/
 /*=Variables=========11=======================================*/
+/*=Navbar Styles=====24=======================================*/
 /*=Modal Styles =====36=======================================*/
 /*=Btn Styles =======58=======================================*/
 /*============================================================*/
 
-
-// Imports
-// Variables
+// Variables ====================================================================
 $white  : #ffffff;
 $black : #000000;
 $okraGreen : #0D8120;
 $okraLightGreen: #139E2A;
 
-
-html {
-	background-color: #ffffff;
-}
-
+// Navbar Styles =================================================================
 .navbar {
 	background-color: $okraGreen;
 }
@@ -31,12 +25,19 @@ html {
 		color: $white;
 	}
 
-	.navbar-nav > li > a:hover {
+	.navbar-nav > li > a:hover,
+	.navbar-nav > li > a:focus,
+	.navbar-nav > li > a:active {
 		color: $white;
 		font-weight: 700;
 	}
 }
-//Modal Styles
+.navbar-right {
+	i:hover, i:active, i:focus {
+		color: $okraLightGreen;
+	}
+}
+// Modal Styles =================================================================
 .modal-content {
 	.modal-title {
 		color: $okraGreen;
@@ -56,7 +57,7 @@ html {
 		}
 	}
 }
-//Btn Styles
+// Btn Styles ==================================================================
 .btn-primary {
 	color: $white;
 	background-color: $okraGreen;
