made template for organization

--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -1,1 +1,74 @@
-<div>Dummy content</div>
+<section class="organization-wrapper">
+	<div class="row">
+		<div class="centered-container">
+			<div class="tree-node active pull-left">
+				Organization #1
+			</div>
+			<button class="btn btn-danger"><i class="fa fa-minus"></i></button>
+		</div>
+		<div class="centered-container">
+			<div class="well">
+				The mission of this organization is to blah blah blah blah blah blah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blah
+			</div>
+		</div>
+	</div>
+
+	<!-- objectives -->
+	<div class="row">
+		<div class="centered-container">
+			<div class="objective pull-left">
+				<div class="tree-node active pull-left">
+					Objective #1
+				</div>
+				<button class="btn btn-danger"><i class="fa fa-minus"></i></button>
+				<button class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+			</div>
+
+			<div class="objective pull-left">
+				<div class="tree-node pull-left">
+					Objective #2
+				</div>
+				<button class="btn btn-info"><i class="fa fa-plus"></i></button>
+			</div>
+
+			<div class="objective pull-left">
+				<div class="tree-node pull-left">
+					Objective #3
+				</div>
+				<button class="btn btn-info"><i class="fa fa-plus"></i></button>
+			</div>
+
+			<div class="objective pull-left">
+				<div class="tree-node pull-left">
+					Objective #4
+				</div>
+				<button class="btn btn-info"><i class="fa fa-plus"></i></button>
+			</div>
+		</div>
+	</div>
+
+	<!-- key results -->
+	<div class="row">
+		<div class="centered-container">
+			<div class="tree-node pull-left active">
+				Key Result
+			</div>
+			<button class="btn btn-danger"><i class="fa fa-minus"></i></button>
+		</div>
+	</div>
+
+	<!-- Tasks -->
+	<div class="row">
+		<div class="centered-container">
+			<div class="task-node">
+				<input type="checkbox"> Task 1
+			</div>
+			<div class="task-node">
+				<input type="checkbox"> Task 2
+			</div>
+			<div class="task-node">
+				<input type="checkbox"> Task 3
+			</div>
+		</div>
+	</div>
+</section>
