changes to remove bootstrap components

--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -1,12 +1,12 @@
 /*============================================================*/
 /*===================Table Of Contents========================*/
 /*============================================================*/
-/*=Variables=========11=======================================*/
-/*=Mixins============19=======================================*/
-/*=Navbar Styles=====25=======================================*/
-/*=Modal Styles =====49=======================================*/
-/*=Btn Styles =======69=======================================*/
-/*=Organization =====88=======================================*/
+/*=Variables==================12==============================*/
+/*=Mixins=====================19==============================*/
+/*=Toolbar Styles=============27==============================*/
+/*=Dialog/Modal Styles =======31==============================*/
+/*=Btn Styles ================41==============================*/
+/*=Organization ==============53==============================*/
 /*============================================================*/
 
 // Variables ====================================================================
