--- a/src/app/header/add-organization-modal.tpl.html
+++ b/src/app/header/add-organization-modal.tpl.html
@@ -1,5 +1,9 @@
 <md-dialog flex="30">
-    <md-subheader><h3 class="modal-title text-center">Add An Organization</h3></md-subheader>
+	<div layout="row" layout-align="center">
+	    <md-subheader>
+	    	<h3>Add An Organization</h3>
+	    </md-subheader>
+	</div>
 	<md-content>
 	    <div layout="row" layout-align="center">
 			<form class="form-horizontal" name="modal.organizationForm">
@@ -8,7 +12,7 @@
 		</div>
 	<md-content>
 	<div class="md-actions" layout="row" layout-align="center end">
-		<md-button class="md-raised md-warn" ng-click="modal.closeModal()">Cancel</md-button>
-		<md-button class="md-raised md-primary" ng-click="modal.createOrganization(modal.organizationName)">Add</md-button>
+		<md-button class="md-raised md-warn" ng-click="modal.closeModal()" aria-label="cancel">Cancel</md-button>
+		<md-button class="md-raised md-primary" ng-click="modal.createOrganization(modal.organizationName)" aria-label="add">Add</md-button>
 	</div>
 <md-dialog>
