added mission statement

--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -12,10 +12,11 @@
 	    	</md-button>
 	    </div>
 	</div>
-	<div layout="row">
-		The mission of this organization is to blah blah blah blah blah blah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blahblah blah blah blah blah
+	<div layout="row" layout-align="center">
+	    <md-button class="md-raised" ng-click="vm.openMissionStatement()">
+		    Mission Statement
+		</md-button>
 	</div>
-
 	<!-- objectives -->
 	<div layout="row" layout-align="center center">
 		<div class="objective" layout="row" layout-align="start">
@@ -66,7 +67,7 @@
 				Key Result #2
 			</div>
 			<div layout="column" layout-align="start end">
-				<md-button href class="md-raised md-warn" aria-label="toggle">
+				<md-button href class="md-raised" aria-label="toggle">
 	            	<i class="fa fa-plus"></i>
 	        	</md-button>
 	        </div>
