--- a/src/styles/sass/main.scss
+++ b/src/styles/sass/main.scss
@@ -5,8 +5,9 @@
 /*=Mixins=====================19==============================*/
 /*=Toolbar Styles=============27==============================*/
 /*=Dialog/Modal Styles =======31==============================*/
-/*=Btn Styles ================41==============================*/
-/*=Organization ==============53==============================*/
+/*=Toast Styles ==============41==============================*/
+/*=Btn Styles ================49==============================*/
+/*=Organization ==============65==============================*/
 /*============================================================*/
 
 // Variables ====================================================================
@@ -36,6 +37,13 @@ md-item {
 
 	md-content {
 		padding-bottom: 0px;
+	}
+}
+// Toast Styles ================================================================
+md-toast {
+	.md-button {
+		margin-top: -20px;
+		margin-right: -20px;
 	}
 }
 // Btn Styles ==================================================================
