--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -5,8 +5,9 @@
 /*=Mixins=====================19==============================*/
 /*=Toolbar Styles=============27==============================*/
 /*=Dialog/Modal Styles =======31==============================*/
-/*=Btn Styles ================41==============================*/
-/*=Organization ==============53==============================*/
+/*=Toast Styles ==============41==============================*/
+/*=Btn Styles ================49==============================*/
+/*=Organization ==============65==============================*/
 /*============================================================*/
 md-item {
   margin: 0px 10px;
@@ -17,6 +18,11 @@ md-item {
 }
 .md-dialog-container md-content {
   padding-bottom: 0px;
+}
+
+md-toast .md-button {
+  margin-top: -20px;
+  margin-right: -20px;
 }
 
 .md-raised {
