added validation to the dialog for mission statement

--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -12,7 +12,7 @@
 	    	</md-button>
 	    </div>
 	    <div layout="column" layout-align="start">
-		    <md-button class="md-fab" aria-label="Insert Drive" ng-click="vm.openMissionStatementModal()">
+		    <md-button class="md-fab" aria-label="Mission Statement" ng-click="vm.openMissionStatementModal()">
 		    	<i class="fa fa-briefcase"></i>
 			    <md-tooltip>
 			        Mission Statement
