--- a/src/app/organization/mission-statement-modal.tpl.html
+++ b/src/app/organization/mission-statement-modal.tpl.html
@@ -8,14 +8,22 @@
 		{{modal.missionStatement}}
 	</div>
 	<md-content>
-	    <div layout="row" layout-align="center">
-			<form class="form-horizontal" name="modal.missionStatementForm">
-				<md-input-group class="long">
-				   <label>New Mission Statement</label>
-				   <md-input required ng-model="modal.newMissionStatement" autocapitalize="off"></md-input>
-				</md-input-group>
-			</form>
-		</div>
+		<form name="modal.missionStatementForm">
+		    <div layout="row" layout-align="center center">
+		    	<div layout-align="start start">
+					<md-input-group class="long">
+					   <label>New Mission Statement</label>
+					   <md-input required name="newMissionStatement" ng-model="modal.newMissionStatement" autocapitalize="off"></md-input>
+					</md-input-group>
+				</div>
+				<div class="error-msg ng-hide" layout-align="center end" ng-show="modal.formSubmitted && modal.missionStatementForm.newMissionStatement.$invalid" ng-cloak>
+					<i class="fa fa-warning"></i>
+					<md-tooltip>
+						This field is required
+					</md-tooltip>
+				</div>
+			</div>
+		</form>
 	<md-content>
 	<div class="md-actions" style="border-top: none;" layout="row" layout-align="center end">
 		<md-button class="md-raised md-warn" ng-click="modal.closeModal()" aria-label="cancel">Cancel</md-button>
