tweaked ui for adding members to org

--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -11,14 +11,14 @@
 				<i class="fa fa-pencil"></i>
 	    	</md-button>
 	    </div>
-	    <div layout="column" layout-align="start">
-		    <md-button class="md-fab" aria-label="Mission Statement" ng-click="vm.openMissionStatementModal()">
+	    <div layout="column" layout-align="start end">
+	    	<md-button class="md-raised md-primary" aria-label="members">
+		    	<i class="fa fa-users"></i>
+		    </md-button>
+		    <md-button class="md-raised md-primary" ng-click="vm.openMissionStatementModal()" aria-label="mission statement">
 		    	<i class="fa fa-briefcase"></i>
-			    <md-tooltip>
-			        Mission Statement
-			    </md-tooltip>
-			</md-button>
-		</div>
+		    </md-button>
+	    </div>
 	</div>
 	<!-- objectives -->
 	<div layout="row" layout-align="center center">
