added modal and dependencies for adding a member to an org

--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -12,14 +12,14 @@
 	    	</md-button>
 	    </div>
 	    <div layout="column" layout-align="start end">
-	    	<md-button class="md-raised md-primary" aria-label="members">
+	    	<md-button class="md-raised md-primary" ng-click="vm.openOrganizationMembersModal()" aria-label="members">
 		    	<i class="fa fa-users"></i>
 		    </md-button>
 		    <md-button class="md-raised md-primary" ng-click="vm.openMissionStatementModal()" aria-label="mission statement">
 		    	<i class="fa fa-briefcase"></i>
 		    </md-button>
 	    </div>
-	</div>
+	</div> 
 	<!-- objectives -->
 	<div layout="row" layout-align="center center">
 		<div class="objective" layout="row" layout-align="start">
