--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -62,6 +62,30 @@ md-checkbox:focus .md-label {
   display: none !important;
 }
 
+ul.list-horizontal {
+  list-style: none;
+}
+ul.list-horizontal li {
+  float: left;
+  text-align: center;
+  margin-right: 15px;
+  margin-bottom: 10px;
+  padding: 5px;
+  -ms-box-shadow: 0px 2px 6px #888888;
+  box-shadow: 0px 2px 6px #888888;
+  max-width: 170px;
+}
+ul.list-horizontal li h3 {
+  margin-bottom: 0px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+ul.list-horizontal li span.sub-text {
+  font-size: 12px;
+  font-weight: 500;
+}
+
 .organization-wrapper .tree-node {
   padding: 20px 20px;
   background-color: #c2c5c3;
