--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -86,6 +86,15 @@ ul.list-horizontal li span.sub-text {
   font-weight: 500;
 }
 
+.collapse {
+  overflow: hidden;
+  max-height: 0 !important;
+}
+
+.organization-wrapper [layout=row], .organization-wrapper [layout=column] {
+  transition: max-height ease-in-out 0.9s;
+  max-height: 100px;
+}
 .organization-wrapper .tree-node {
   padding: 20px 20px;
   background-color: #c2c5c3;
