toggle md button classes

--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -4,7 +4,7 @@
 			Organization #1
 		</div>
 		<div layout="column" layout-align="start end">
-			<md-button href class="md-raised md-warn" ok-collapse linked-to="organizationNode" aria-label="toggle">
+			<md-button href class="md-raised md-primary" ok-collapse linked-to="organizationNode" aria-label="toggle">
 	        	<i class="fa fa-plus"></i>
 	    	</md-button>
 	    	<md-button href class="md-raised md-primary" aria-label="edit">
@@ -21,14 +21,14 @@
 	    </div>
 	</div> 
 	<!-- objectives -->
-	<div layout="row" layout-align="center center" id="objectiveNode">
+	<div layout="row" class="collapse" layout-align="center center" id="objectiveNode">
 		<div class="objective" layout="row" layout-align="start">
 			<div class="tree-node active" layout-align="start">
 				Objective #1
 			</div>
 			<div layout="column" layout-align="end end">
-	            <md-button href class="md-raised md-warn" aria-label="toggle">
-	            	<i class="fa fa-minus"></i>
+	            <md-button href class="md-raised md-primary" ok-collapse linked-to="objectiveNode" aria-label="toggle">
+	            	<i class="fa fa-plus"></i>
 	        	</md-button>
 	        	<md-button href class="md-raised md-primary" aria-label="edit">
 					<i class="fa fa-pencil"></i>
@@ -51,14 +51,14 @@
 	</div>
 
 	<!-- key results -->
-	<div layout="row" layout-align="center center" id="keyResultNode">
+	<div layout="row" class="collapse" layout-align="center center" id="keyResultNode">
 		<div class="key-result" layout="row" layout-align="start">
 			<div class="tree-node active">
 				Key Result #1
 			</div>
 			<div layout="column" layout-align="end end">
-				<md-button href class="md-raised md-warn" aria-label="toggle">
-	            	<i class="fa fa-minus"></i>
+				<md-button href class="md-raised md-primary" ok-collapse linked-to="keyResultNode" aria-label="toggle">
+	            	<i class="fa fa-plus"></i>
 	        	</md-button>
 	        	<md-button href class="md-raised md-primary" aria-label="edit">
 					<i class="fa fa-pencil"></i>
@@ -78,7 +78,7 @@
 	</div>
 
 	<!-- Tasks -->
-	<div layout="column" layout-align="center center" id="taskNode">
+	<div layout="column" class="collapse" ok-collapse linked-to="taskNode" layout-align="space-around center" id="taskNode">
 		<div layout="row" layout-align="start center" ng-repeat="task in [1, 2, 3, 4]">
 			<md-checkbox ng-model="vm.isChecked[$index]" aria-label></md-checkbox>
 			<div class="task-node">
