--- a/src/app/organization/organization-tree.tpl.html
+++ b/src/app/organization/organization-tree.tpl.html
@@ -4,7 +4,12 @@
 			Organization #1
 		</div>
 		<div layout="column" layout-align="start end">
-			<md-button href class="md-raised md-primary" ok-collapse linked-to="organizationNode" aria-label="toggle">
+			<md-button href class="md-raised md-primary" 
+					ok-collapse 
+					ok-toggle-color
+					linked-to="organizationNode"
+					all-linked-nodes="vm.linkedNodeIds"
+					aria-label="toggle">
 	        	<i class="fa fa-plus"></i>
 	    	</md-button>
 	    	<md-button href class="md-raised md-primary" aria-label="edit">
@@ -22,26 +27,18 @@
 	</div> 
 	<!-- objectives -->
 	<div layout="row" class="collapse" layout-align="center center" id="objectiveNode">
-		<div class="objective" layout="row" layout-align="start">
-			<div class="tree-node" layout-align="start">
-				Objective #1
-			</div>
-			<div layout="column" layout-align="end end">
-	            <md-button href class="md-raised" ok-collapse linked-to="objectiveNode" aria-label="toggle">
-	            	<i class="fa fa-plus"></i>
-	        	</md-button>
-	        	<md-button href class="md-raised md-primary" aria-label="edit">
-					<i class="fa fa-pencil"></i>
-	        	</md-button>
-	        </div>
-		</div>
 
-		<div class="objective" layout="row" layout-align="start" ng-repeat="objective in [1, 2, 3]">
+		<div class="objective" layout="row" layout-align="start" ng-repeat="objective in [1, 2, 3, 4]">
 			<div class="tree-node" layout-align="start">
-				Objective {{$index + 2}}
+				Objective {{$index + 1}}
 			</div>
 			<div layout="column" layout-align="start end">
-	            <md-button href class="md-raised" ok-collapse linked-to="objectiveNode" aria-label="toggle">
+	            <md-button href class="md-raised" 
+	            		ok-collapse
+	            		ok-toggle-color
+	            		linked-to="objectiveNode" 
+	            		all-linked-nodes="vm.linkedNodeIds"
+	            		aria-label="toggle">
 	            	<i class="fa fa-plus"></i>
 	        	</md-button>
 	        	<md-button href class="md-raised md-primary" aria-label="edit">
@@ -60,7 +57,12 @@
 				Key Result #1
 			</div>
 			<div layout="column" layout-align="end end">
-				<md-button href class="md-raised" ok-collapse linked-to="keyResultNode" aria-label="toggle">
+				<md-button href class="md-raised" 
+						ok-collapse
+						ok-toggle-color 
+						linked-to="keyResultNode" 
+						all-linked-nodes="vm.linkedNodeIds"
+						aria-label="toggle">
 	            	<i class="fa fa-plus"></i>
 	        	</md-button>
 	        	<md-button href class="md-raised md-primary" aria-label="edit">
@@ -73,7 +75,12 @@
 				Key Result #2
 			</div>
 			<div layout="column" layout-align="start end">
-				<md-button href class="md-raised" ok-collapse linked-to="keyResultNode" aria-label="toggle">
+				<md-button href class="md-raised" 
+						ok-collapse
+						ok-toggle-color
+						linked-to="keyResultNode" 
+						all-linked-nodes="vm.linkedNodeIds"
+						aria-label="toggle">
 	            	<i class="fa fa-plus"></i>
 	        	</md-button>
 	        	<md-button href class="md-raised md-primary" aria-label="edit">
@@ -84,7 +91,12 @@
 	</div>
 
 	<!-- Tasks -->
-	<div layout="column" class="collapse" ok-collapse linked-to="taskNode" layout-align="space-around center" id="taskNode">
+	<div layout="column" class="collapse" 
+			ok-collapse 
+			linked-to="taskNode" 
+			layout-align="space-around center" 
+			all-linked-nodes="vm.linkedNodeIds"
+			id="taskNode">
 		<div layout="row" layout-align="start center" ng-repeat="task in [1, 2, 3, 4]">
 			<md-checkbox ng-model="vm.isChecked[$index]" aria-label></md-checkbox>
 			<div class="task-node">
